# hikvision-qt-sdk

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  mycamera.cpp  mycamera.h
